Add summary to the Transition API
TrRouting's "summary" request has been added to the Transition API
Fix: #1031
