# packages/transition-backend/src/api/public.routes.ts
@@ -30,7 +30,10 @@ import RoutingModesAPIResponse from './public/RoutingModesAPIResponse';
 import RouteAPIResponse from './public/RouteAPIResponse';
 import AccessibilityMapAPIResponse from './public/AccessibilityMapAPIResponse';
 import { validateAndCreateTripRoutingAttributes } from 'chaire-lib-common/lib/services/routing/RoutingAttributes';
+import { validateAndCreateSummaryAttributes, SummaryQueryAttributes } from 'chaire-lib-common/lib/services/routing/SummaryAttributes';
 import TrError from 'chaire-lib-common/lib/utils/TrError';
+import trRoutingService from 'chaire-lib-backend/lib/utils/trRouting/TrRoutingServiceBackend';
+import { SummaryResponse } from 'chaire-lib-common/lib/api/TrRouting/trRoutingApiV2';
 
 export default function (app: express.Express, passport: PassportStatic) {
     app.use('/token', (req, res, next) => {
@@ -136,6 +139,17 @@ export default function (app: express.Express, passport: PassportStatic) {
             routingModes.push('transit');
             const response: RoutingModesAPIResponse = new RoutingModesAPIResponse(routingModes);
             res.status(200).json(response.getResponse());
+        } catch (error) {
+            next(error);
+        }
+    });
+
+    router.get('/summary', async (req, res, next) => {
+        try {
+            const body: SummaryQueryAttributes = req.body;
+            const summaryAttributes = validateAndCreateSummaryAttributes(body);
+            const summaryResults: SummaryResponse = await trRoutingService.summary(summaryAttributes);
+            res.status(200).json(summaryResults);
         } catch (error) {
             next(error);
         }
